<resources>
    <string name="app_name">goChurch</string>
    <!--<string name="url" translatable="false">http://192.168.1.109:55/</string>-->
    <string name="url" translatable="false">http://jdadmin-001-site4.itempurl.com/</string>
    <string name="network_off_alert">Please turn on internet</string>
    <string name="ok_button">OK</string>
    <string name="church_name">Church Name</string>
    <string name="about">About</string>
    <string name="view_more">View more</string>
    <string name="priest">Priest</string>
    <string name="priests">Priests</string>
    <string name="name">Name</string>
    <string name="priest_name">Priest Name</string>
    <string name="parish">Parish</string>
    <string name="mobile">Mobile</string>
    <string name="date_of_ordination">Date of Ordination</string>
    <string name="contact">Contact</string>
    <string name="church_address">Church Address</string>
    <string name="phone">Phone</string>
    <string name="view_church_in_map">View Church in map</string>
    <string name="mass_timings">Mass Timings</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="novenas">Novenas</string>
    <string name="search_by_town_church">Search by town/church</string>
    <string name="my_church">My Church</string>
    <string name="nearby_churches">Nearby Churches</string>
    <string name="notices">Notices</string>
    <string name="events">Events</string>
    <string name="family_units">Family Units</string>
    <string name="gallery">Gallery</string>
    <string name="timings">Timings</string>
    <string name="change_my_church">Change my church✏</string>
    <string name="loading">Loading…</string>
    <string name="novena_dates">%1$s to %2$s</string>
    <string name="loc_permission_denied">Location Permission denied</string>
    <string name="not_find_location">Sorry, could not find your location</string>
    <string name="pious_org">Pious Org.</string>
    <string name="pious_org_full">Pious Organisations</string>
    <string name="org_name">Organisation Name</string>
    <string name="history">History</string>
    <string name="details">Details</string>
    <string name="institutions">Institutions</string>
    <string name="ins_name">Institution Name</string>
    <string name="address">Address</string>
    <string name="general_inform">General Information</string>
    <string name="founder">Founder:</string>
    <string name="founded">Founded:</string>
    <string name="email">Email:</string>
    <string name="mobile_colon">Mobile:</string>
    <string name="phone_colon">Phone:</string>
    <string name="towns">Towns</string>
    <string name="baptismal_name">Baptismal Name</string>
    <string name="designation">Designation</string>
    <string name="status">Status</string>
    <string name="dob">Date of Birth</string>
    <string name="email_id">Email id</string>
    <string name="set_as_mychurch">Set as MyChurch</string>
    <string name="mychurch_set_notification">%1$s is set as MyChurch</string>
    <string name="unitexe">Unit Executives</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="locate">Locate</string>
    <string name="set_my_church">Set My Church</string>
    <string name="no_results_found">No results found</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="back">Back</string>
    <string name="nearby">Nearby</string>
    <string name="wait">Please wait…</string>
    <string name="submit">Submit</string>
    <string name="upload_church_image">Upload church image</string>
    <string name="place">Place</string>
    <string name="your_name">Your Name</string>
    <string name="your_contact_number">Your Contact Number</string>
    <string name="remarks">Remarks</string>
    <string name="want_to_add_this_church">Want to add this church?</string>
    <string name="old_events">Old events</string>
    <string name="set_reminder">Set reminder ⏰</string>
    <string name="notifications">Notifications</string>
    <string name="search_your_church_nset_it_as_mychurch">Search your church &amp;\n set it as \'MyChurch\'</string>
    <string name="navadarsan">Navadarsan</string>
    <string name="education_forum">Education Forum</string>
    <string name="register_as_a_parent">Register as a parent</string>
    <string name="register_as_a_student">Register as a student</string>
    <string name="already_registered_note">Select either of the above even if you have already registered</string>
    <string name="verify_number">Verify Number</string>
    <string name="enter_otp">Please enter OTP sent to your mobile</string>
    <string name="tyr_again">Please try again</string>
    <string name="family_unit">Family Unit</string>
    <string name="add_another_child">＋ another child</string>
    <string name="add_child">Add child</string>
    <string name="name_of_parent">Name of parent</string>
    <string name="_class">Class</string>
    <string name="school">School</string>
    <string name="age">Age</string>
    <string name="child_name_label">Child Name</string>
    <string name="email_optional">Email (optional)</string>
    <string name="give_valid_info">Please give valid information</string>
    <string name="student_name">Student Name</string>
    <string name="event_response_1">Attending</string>
    <string name="event_response_2">May be</string>
    <string name="event_response_3">Not Attending</string>
    <string name="who_is_going">Who is/are going?</string>
    <string name="pl_select_who_are_going">Please select who are attending</string>
    <string name="response_sent">Response sent ✓</string>
    <string name="archbishop">Archbishop</string>
    <string name="delete_notifications">Delete all notifications?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="clear">clear</string>
</resources>
