<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_request_church"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.churchapp.RequestChurch"
    android:background="@drawable/sky_bg_full">
    <TextView
        android:text="Request for adding a church"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/activity_head"
        android:layout_margin="15dp"
        android:textSize="22sp"
        android:textColor="@android:color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_head"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:id="@+id/new_image"
        android:src="@drawable/add_church"
        android:scaleType="center"
        android:adjustViewBounds="true"/>
    <TextView
        android:text="@string/upload_church_image"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/file_name"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/new_image"
        android:maxLines="1"
        android:layout_margin="3dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_transparent_card"
            android:layout_margin="5dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/church_name"
                android:textColor="@color/primary_text"
                android:hint="@string/church_name"
                android:textColorHint="@color/secondary_text"
                android:maxLength="150"
                android:maxLines="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:textColor="@color/primary_text"
                android:hint="@string/church_address"
                android:layout_below="@+id/church_name"
                android:textColorHint="@color/secondary_text"
                android:maxLength="500"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/place"
                android:textColor="@color/primary_text"
                android:hint="@string/place"
                android:layout_below="@+id/address"
                android:textColorHint="@color/secondary_text"
                android:maxLength="50"
                android:maxLines="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_name"
                android:textColor="@color/primary_text"
                android:hint="@string/your_name"
                android:layout_below="@+id/place"
                android:textColorHint="@color/secondary_text"
                android:maxLength="50"
                android:maxLines="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_contact"
                android:textColor="@color/primary_text"
                android:hint="@string/your_contact_number"
                android:layout_below="@+id/user_name"
                android:textColorHint="@color/secondary_text"
                android:inputType="phone"
                android:maxLength="50"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textColor="@color/primary_text"
                android:hint="@string/email_id"
                android:layout_below="@+id/user_contact"
                android:textColorHint="@color/secondary_text"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/remarks"
                android:textColor="@color/primary_text"
                android:hint="@string/remarks"
                android:layout_below="@+id/email"
                android:textColorHint="@color/secondary_text"
                android:maxLength="500"/>
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/addAttach"
            android:onClick="Upload"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            />
    </LinearLayout>
</ScrollView>

</RelativeLayout>
