<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_event_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky_bg_full"
    tools:context="com.tech.thrithvam.churchapp.EducationForumEventsDetails">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:layout_margin="4dp"
        android:paddingLeft="6dp"
        android:paddingStart="6dp"
        android:textSize="12sp"/>
    <TextView
        android:text="@string/events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/activity_event_head"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:textSize="22sp"
        android:textColor="@android:color/white"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_scrollview"
        android:layout_below="@+id/activity_event_head"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/event_img"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="Date"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_date"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_below="@+id/event_img"
                android:maxLines="1"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventsLayout"
                android:layout_below="@+id/event_date"
                android:layout_margin="7dp"
                android:background="@drawable/white_transparent_card"
                android:padding="10dp"
                android:animateLayoutChanges="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:id="@+id/event_details"
                    android:textColor="@color/primary_text"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_reminder"
                    android:textColor="@color/colorAccent"
                    android:layout_below="@id/event_details"
                    android:id="@+id/set_reminder"
                    android:padding="5dp"
                    android:gravity="right"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/set_reminder"
                    android:gravity="center"
                    android:id="@+id/response">
                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/response_1"
                        android:text="@string/event_response_1"
                        android:textColor="@color/colorAccent"
                        android:layout_margin="5dp"
                        app:buttonTint="@color/colorAccent"/>
                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/response_2"
                        android:text="@string/event_response_2"
                        android:textColor="@color/colorAccent"
                        android:layout_margin="5dp"
                        app:buttonTint="@color/colorAccent"/>
                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/response_3"
                        android:text="@string/event_response_3"
                        android:textColor="@color/colorAccent"
                        android:layout_margin="5dp"
                        app:buttonTint="@color/colorAccent"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/response_sent"
                    android:textColor="@color/secondary_text"
                    android:layout_below="@id/response"
                    android:gravity="center"
                    android:id="@+id/response_sent_text"
                    android:visibility="gone"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
