<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_transparent_card"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">
    <ImageView
        android:id="@+id/close"
        android:layout_width="35dp"
        android:layout_height="27dp"
        android:src="@drawable/close"
        android:layout_gravity="right"
        android:padding="5dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child_name_label"
            android:id="@+id/name_label"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPersonName"
            android:id="@+id/name_of_child"
            android:maxLines="1"
            android:maxLength="100"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_class"
            android:textColor="@color/primary_text"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPersonName"
            android:id="@+id/child_class"
            android:maxLines="1"
            android:maxLength="50"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textColor="@color/primary_text"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="textPersonName"
            android:id="@+id/school"
            android:maxLines="1"
            android:maxLength="250"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textColor="@color/primary_text"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/dob"
            android:maxLines="1"
            android:focusable="false"
            android:onClick="getDOB"/>
</LinearLayout>