<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_search_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.churchapp.SearchResults"
    android:background="@drawable/sky_bg_full">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#adffffff"
    android:id="@+id/searchView"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:focusableInTouchMode="true">
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search"
        android:padding="7dp"
        android:hint="@string/search_by_town_church"
        android:textColorHint="@color/edit_text"
        android:gravity="center"
        android:maxLength="100"
        android:background="@drawable/boarder_white"
        android:id="@+id/searchViewText"
        android:textColor="@color/edit_text"
        android:singleLine="true"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:imeOptions="actionSearch"/>
</RelativeLayout>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:src="@drawable/search"
        android:tint="@color/colorAccent"
        android:id="@+id/searchImage"
        android:layout_alignTop="@+id/searchView"
        android:layout_alignRight="@+id/searchView"
        android:layout_alignEnd="@+id/searchView"
        android:layout_margin="5dp"
        android:padding="7dp"
        android:layout_alignBottom="@+id/searchView"
        />

    <TextView
        android:text="@string/loading"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchView"
        android:layout_centerHorizontal="true"
        android:id="@+id/loading_text" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay"
        android:id="@+id/resultsGrid"
        android:layout_below="@+id/searchView"
        android:divider="@null"
        android:dividerHeight="0.5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/itemsLoading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:indicator="BallTrianglePath"
        app:indicator_color="@color/white_patch"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/want_to_add_this_church"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/white_transparent_card"
        android:id="@+id/request_church"
        android:visibility="invisible"
        android:onClick="request_church"/>
</RelativeLayout>
